[metadata]
name = nimba-framework
version = 0.0.1
author = Nimba Solution Compagny
description = Nimba web framework python all in one.
long_description = file: README.rst
url = https://github.com/hadpro24/nimba-framework
author = Harouna Diallo
author_email = dev.harouna@gmail.com
license = BSD-3-Clause
classifiers =
    Development Status :: Beta
    Environment :: Web Environment
    Framework :: Nimba
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Internet :: WWW/HTTP :: WSGI
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules
project_urls =
    Documentation = https://github.com/hadpro24/nimba-framework
    Release notes = https://github.com/hadpro24/nimba-framework/stable/releases/
    Source = https://github.com/hadpro24/nimba-framework

[options]
include_package_data = true
packages = find: