[metadata]
name = nimba
version = 0.0.8
description = Nimba is a modern, fast coding, web framework with Python.
long_description = file: README.rst
keywords = python, python3, framework, nimba, nimba-solution, web
url = https://github.com/hadpro24/nimba-framework
author = Harouna Diallo
author_email = dev.harouna@gmail.com
license = BSD-3-Clause
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Internet :: WWW/HTTP :: WSGI
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules
project_urls =
    Documentation = https://docs.nimbasolution.com/
    Release notes = https://docs.nimbasolution.com/stable/releases/
    Source = https://github.com/hadpro24/nimba-framework

[options]
include_package_data = true
packages = find:
python_requires = >=3.6
install_requires =
    Jinja2 == 3.0.0
    watchdog == 2.1.2

[options.entry_points]
console_scripts =
    nimba = nimba.apps:mont_nimba
